--- a/space_android/app/src/main/res/drawable/normal_button_shape_circle.xml
+++ b/space_android/app/src/main/res/drawable/normal_button_shape_circle.xml
@@ -5,7 +5,7 @@
     android:useLevel="false" >
     <!-- 填充的颜色 -->
 
-    <solid android:color="#FFFF00"/>
+    <solid android:color="#Fefefe"/>
 
     <!-- 设置按钮的四个角为弧形 -->
 
