--- a/space_android/app/src/main/res/layout/activity_register1.xml
+++ b/space_android/app/src/main/res/layout/activity_register1.xml
@@ -15,13 +15,14 @@
         >
         <ImageView
             android:id="@+id/back"
-            android:padding="10dp"
+            android:padding="15dp"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginLeft="5dp"
             android:src="@drawable/tt_top_back"
             />
         <TextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:textColor="@android:color/white"
