--- a/space_android/app/src/main/res/layout/item_moments_adapter.xml
+++ b/space_android/app/src/main/res/layout/item_moments_adapter.xml
@@ -83,8 +83,8 @@
 
         <TextView
             android:id="@+id/tv_pulldown"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/shape_frame_add_follow"
@@ -92,9 +92,9 @@
             android:gravity="center"
             android:padding="5dp"
             android:text="+关注"
-            android:textColor="@drawable/selector_btn_follow"
+            android:textColor="@color/custom_bottom"
             />
-        <!--</LinearLayout>-->
+        <!-- android:textColor="@drawable/selector_btn_follow"-->
     </RelativeLayout>
 
     <include layout="@layout/divider_line"/>
@@ -161,7 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:gravity="center"
-                android:text="0"
+                android:text="分享"
                 android:textColor="#444444"/>
 
         </LinearLayout>
@@ -191,7 +191,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:paddingLeft="5dp"
-                android:text="0"
+                android:text="评论"
                 android:textColor="#444444"/>
 
         </LinearLayout>
