--- a/space_android/app/src/main/res/layout/tt_activity_login.xml
+++ b/space_android/app/src/main/res/layout/tt_activity_login.xml
@@ -4,6 +4,10 @@
 
     <!-- Login form -->
 
+    <!-- Login progress -->
+
+
+
     <FrameLayout
         android:id="@+id/login_form"
         android:layout_width="match_parent"
@@ -31,7 +35,7 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:visibility="invisible">
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="match_parent"
@@ -137,10 +141,16 @@
                     android:text="@string/switch_login_server"
                     android:visibility="gone"
                     />
-
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp">
                 <TextView
                     android:id="@+id/register"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="left"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="30dp"
@@ -151,12 +161,26 @@
                     android:text="没有账号?去注册"
                     android:textColor="@color/blue"
                     />
+
+                <TextView
+                    android:id="@+id/find_pwd"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingLeft="@dimen/dp_10"
+                    android:paddingRight="@dimen/dp_10"
+                    android:text="忘记密码?去找回"
+                    android:textColor="@color/blue"
+                    />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
-
-    <!-- Login progress -->
-
     <LinearLayout
         android:id="@+id/login_status"
         android:layout_width="match_parent"
