--- a/space_android/app/src/main/res/layout/tt_activity_register.xml
+++ b/space_android/app/src/main/res/layout/tt_activity_register.xml
@@ -49,13 +49,14 @@
             >
             <ImageView
                 android:id="@+id/back"
-                android:padding="10dp"
+                android:padding="15dp"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginLeft="5dp"
                 android:src="@drawable/tt_top_back"
                  />
             <TextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:textColor="@android:color/white"
@@ -107,19 +108,14 @@
                 <!--android:layout_height="0.1dp"-->
                 <!--android:background="@color/color_bg_gray" />-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
                 <EditText
 
                     android:id="@+id/et_code"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="10dp"
-                    android:layout_weight="1"
                     android:background="@null"
                     android:maxLength="6"
                     android:numeric="integer"
@@ -136,8 +132,6 @@
                     android:text="获取验证码"
                     android:textColor="@color/custom_green"
                     android:visibility="gone"/>
-            </LinearLayout>
-
             <View
                 android:layout_marginRight="15dp"
                 android:layout_marginLeft="15dp"
@@ -165,35 +159,7 @@
             <!--/>-->
             <!--</LinearLayout>-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-                <EditText
-                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
-                    android:maxLength="8"
-                    android:id="@+id/et_referralcode"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:hint="(选填)此邀请码作为推广指定用"
-                    android:padding="5dp"
-                    android:singleLine="true"
-                    android:textColorHint="@color/txt_color_gray_3"
-                    android:textSize="@dimen/text_size_14"
-
-                    />
-            </LinearLayout>
-
-            <View
-                android:layout_marginRight="15dp"
-                android:layout_marginLeft="15dp"
-                android:layout_width="match_parent"
-                android:layout_height="0.1dp"
-                android:background="@color/color_bg_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -240,6 +206,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="0.1dp"
                     android:background="@color/color_bg_gray" />
+                <EditText
+                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                    android:maxLength="8"
+                    android:id="@+id/et_referralcode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:hint="(选填)此邀请码作为推广指定用"
+                    android:padding="5dp"
+                    android:singleLine="true"
+                    android:textColorHint="@color/txt_color_gray_3"
+                    android:textSize="@dimen/text_size_14"
+
+                    />
+                <View
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@color/color_bg_gray" />
             </LinearLayout>
 
             <LinearLayout
@@ -275,7 +262,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
-                android:text="注册"
+                android:text="确认"
                 android:textSize="@dimen/text_size_18"
                 android:textColor="@color/white"
                 android:background="@drawable/shape_circle_solid"
